--- a/app/app.css
+++ b/app/app.css
@@ -1,14 +1,14 @@
 body {
     margin: 0;
     background: linear-gradient(180deg, rgb(117, 81, 194), rgb(255, 255, 255));
-    display: flex;
+    /* display: flex; */
     font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-    height: 100vh;
+    /* height: 100vh;
     width: 100vw;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
   }
-  
+/*   
   main {
     display: flex;
     flex-direction: column;
@@ -62,4 +62,4 @@ body {
   a {
     font-weight: 800;
     text-decoration: none;
-  }
+  } */
